[package]
name = "serde-rmpv"
version = "0.0.1"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Serde integration for the rmpv MessagePack Value type."
license = "MIT"
repository = "https://github.com/cortesi/serde-rmpv"
readme = "README.md"
keywords = ["rmp", "msgpack", "messagepack"]


[dependencies]
rmpv = {version ="1.3.0"}
serde = "1.0.203"
thiserror = "2.0.7"

[dev-dependencies]
serde_derive = "1.0.203"
serde_with = "3.8.1"
